# family-portrait-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.bot  Makefile  README.md  alembic.ini  babel.cfg  build.py  docker-compose.cloud.yml  docker-compose.yml  download_models.py  entrypoint.sh  pyproject.toml  script.py  setup_nginx.sh
.github/workflows/: audit.yml
aiogram_bot_template/: bot.py
aiogram_bot_template/data/: config_helpers.py  constants.py  enums.py  message_provider.py  settings.py
aiogram_bot_template/data/texts/: __init__.py  dto.py  en.py  es.py  ru.py
aiogram_bot_template/db/: models.py
aiogram_bot_template/db/db_api/storages/: base.py  postgres.py
aiogram_bot_template/db/repo/: analytics.py  feedback.py  generations.py  payments.py  users.py
aiogram_bot_template/dto/: __init__.py  facial_features.py  generation_parameters.py  llm_responses.py  post_generation_context.py  prompt_suggestions.py
aiogram_bot_template/handlers/: child_params_handler.py  edit_handler.py  error.py  feedback_handler.py  menu.py  next_step_handler.py  options_handler.py  payment_handler.py  photo_handler.py  prompt_handler.py  quality_handler.py  settings.py  utility.py
aiogram_bot_template/keyboards/inline/: __init__.py  age.py  aspect_ratio.py  callbacks.py  child_age.py  child_selection.py  confirm.py  edit_prompts.py  family_selection.py  feedback.py  gender.py  generation_quality.py  language.py  menu.py  next_step.py  pair_selection.py  quality.py  resemblance.py  session_actions.py  start_selection.py  style_selection.py  trial_confirm.py
aiogram_bot_template/locales/: messages.pot
aiogram_bot_template/locales/en/LC_MESSAGES/: messages.mo  messages.po
aiogram_bot_template/locales/es/LC_MESSAGES/: messages.mo  messages.po
aiogram_bot_template/locales/ru/LC_MESSAGES/: messages.mo  messages.po
aiogram_bot_template/middlewares/: debug_forwarding.py  i18n.py  logging.py
aiogram_bot_template/services/: __init__.py  child_description_generator.py  child_feature_enhancer.py  face_processor.py  generation_utils.py  generation_worker.py  google_sheets_logger.py  image_cache.py  image_generation_service.py  local_file_logger.py  photo_processing.py  photo_processing_manager.py  photo_processor_service.py  prompt_enhancer.py  similarity_scorer.py  suggestion_engine.py
aiogram_bot_template/services/clients/: __init__.py  factory.py  fal_async_client.py  google_ai_client.py  local_ai_client.py  mock_ai_client.py  openrouter_client.py
aiogram_bot_template/services/enhancers/: __init__.py  child_prompt_enhancer.py  eye_enhancer.py  family_prompt_enhancer.py  hairstyle_enhancer.py  identity_feedback_enhancer.py  identity_lock_enhancer.py  parent_visual_enhancer.py  style_enhancer.py
aiogram_bot_template/services/llm_invokers/: __init__.py  enhancer_service.py  vision_service.py
aiogram_bot_template/services/pipelines/: __init__.py  base.py  base_edit.py  child_generation.py  family_photo.py  group_photo.py  group_photo_edit.py  image_edit.py  pair_photo.py  upscale.py
aiogram_bot_template/services/pipelines/child_generation_pipeline/: child_default.py  child_generation.py
aiogram_bot_template/services/pipelines/family_photo_pipeline/: family_default.py  family_photo.py
aiogram_bot_template/services/pipelines/image_edit_pipeline/: edit_default.py  image_edit.py  reframe.py
aiogram_bot_template/services/pipelines/pair_photo_pipeline/: pair_default.py  pair_photo.py
aiogram_bot_template/services/prompting/: __init__.py  base_strategy.py  common_base.py  enhancer_child_prompt.py  enhancer_photoshoot_prompt.py  enhancer_prompt.py  factory.py  fal_strategy.py  mock_strategy.py
aiogram_bot_template/services/prompting/cloud/: __init__.py  fal_strategy.py
aiogram_bot_template/services/prompting/local/: __init__.py  flux_strategy.py  qwen_strategy.py
aiogram_bot_template/services/prompting/styles/: __init__.py  baroque.py  child_generation.py  color_gel.py  default.py  golden_hour.py  hollywood_glamour.py  old.py  party_polaroid.py  photoshoot_continuation.py  pop_art.py  retro_motel.py  vogue.py  wet_plate.py
aiogram_bot_template/services/utils/: __init__.py  http_client.py
aiogram_bot_template/states/: user.py
aiogram_bot_template/utils/: bot_commands.py  connect_to_services.py  logging.py  moderation.py  parameter_parser.py  re_prompt.py  smart_session.py  status_manager.py
aiogram_bot_template/web_handlers/: file_cache_server.py  tg_updates.py
alembic/: env.py
alembic/versions/: 4ed9f75ce4ad_add_enhanced_prompt.py  5ee257782ce5_initial_database_schema.py  82f3a3cd79a1_add_has_used_live_queue_to_users_table.py  8430cdfbc2a6_initial_database_schema.py  8cf0fb3d6eaf_add_has_used_live_queue_to_users_table.py  a66e2d50cff2_initial_database_schema.py  aeeebdf3e72a_initial_database_schema.py  b650660b7fc3_add_sequence_generation.py  c8d6c6d58235_initial_database_schema.py  e3270887e993_add_style_to_generation_model.py  f6101a0795d3_initial_database_schema.py
(+17 files in other folders)
